@@ -4,6 +4,8 @@ Changes
 1.0.19 (?)
 ----------
 
+- Ensure that AWS_NO_SIGN_REQUESTS is sufficient for accessing public S3
+  datasets and that import of boto3 is not required (#1637).
 - An out_dtype parameter has been added to DatasetReaderBase.read, enabling
   on-the-fly casting of raster values to the desired type (#1637). This uses
   the same latent feature used to get support for "int8" data.
